# botcraft-pikmin-project

./: CMakeLists.txt  README.md
src/code/: BlockMap.cpp  GlobalData.cpp  IdSplit.cpp  Loader.cpp  PikminClass.cpp  main.cpp
src/commands/code/: mine-block.cpp
src/commands/include/: global-command-layout.hpp
src/include/: BlockMap.hpp  GlobalData.hpp  IdSplit.hpp  Loader.hpp  PikminClass.hpp
